@@ -1,10 +1,9 @@
 package com.jpa.backend;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import com.jpa.backend.entities.Centro;
-import com.jpa.backend.entities.Destinatario;
 import com.jpa.backend.entities.Gerente;
 import com.jpa.backend.entities.MensajeCentro;
 import com.jpa.backend.repositories.CentroRepository;
@@ -14,13 +13,10 @@ import com.jpa.backend.dtos.CentroDTO;
 import com.jpa.backend.dtos.GerenteDTO;
 import com.jpa.backend.dtos.MensajeDTO;
 
-import org.hibernate.Hibernate;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import org.mockito.internal.matchers.Null;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -36,10 +32,7 @@ import org.springframework.web.util.UriBuilder;
 import org.springframework.web.util.UriBuilderFactory;
 
 import java.net.URI;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @DisplayName("En el servicio de administracion")
@@ -60,57 +53,55 @@ class BackendApplicationTests {
 	@Autowired
 	private JdbcTemplate jdbcTemplate;
 
-	private URI uri(String scheme, String host, int port, String ...paths) {
+	private static final String SCHEME = "http";
+	private static final String HOST = "localhost";
+
+	private URI uri(int port, String ...paths) {
 		UriBuilderFactory ubf = new DefaultUriBuilderFactory();
 		UriBuilder ub = ubf.builder()
-				.scheme(scheme)
-				.host(host).port(port);
+				.scheme(SCHEME)
+				.host(HOST).port(port);
 		for (String path: paths) {
 			ub = ub.path(path);
 		}
 		return ub.build();
 	}
 
-	private RequestEntity<Void> get(String scheme, String host, int port, String path) {
-		URI uri = uri(scheme, host,port, path);
-		var peticion = RequestEntity.get(uri)
+	private RequestEntity<Void> get(int port, String path) {
+		URI uri = uri(port, path);
+        return RequestEntity.get(uri)
 				.accept(MediaType.APPLICATION_JSON)
 				.build();
-		return peticion;
 	}
 
-	private RequestEntity<Void> delete(String scheme, String host, int port, String path) {
-		URI uri = uri(scheme, host,port, path);
-		var peticion = RequestEntity.delete(uri)
+	private RequestEntity<Void> delete(int port, String path) {
+		URI uri = uri(port, path);
+        return RequestEntity.delete(uri)
 				.build();
-		return peticion;
 	}
 
-	private <T> RequestEntity<T> post(String scheme, String host, int port, String path, T object) {
-		URI uri = uri(scheme, host,port, path);
-		var peticion = RequestEntity.post(uri)
+	private <T> RequestEntity<T> post(int port, String path, T object) {
+		URI uri = uri(port, path);
+        return RequestEntity.post(uri)
 				.contentType(MediaType.APPLICATION_JSON)
 				.body(object);
-		return peticion;
 	}
 
-	private <T> RequestEntity<T> put(String scheme, String host, int port, String path, T object) {
-		URI uri = uri(scheme, host,port, path);
-		var peticion = RequestEntity.put(uri)
+	private <T> RequestEntity<T> put(int port, String path, T object) {
+		URI uri = uri(port, path);
+        return RequestEntity.put(uri)
 				.contentType(MediaType.APPLICATION_JSON)
 				.body(object);
-		return peticion;
 	}
 
 	private void compruebaCampos(Gerente expected, Gerente actual){
 		assertThat(actual.getIdUsuario()).isEqualTo(expected.getIdUsuario());
 		assertThat(actual.getEmpresa()).isEqualTo(expected.getEmpresa());
-		assertTrue(
-				new ArrayList<>(
-						actual.getCentrosAsociados() != null ? actual.getCentrosAsociados() : new ArrayList<>()
-				).equals(new ArrayList<>(
-						expected.getCentrosAsociados() != null ? expected.getCentrosAsociados() : new ArrayList<>()
-				)));
+        assertEquals(new ArrayList<>(
+                actual.getCentrosAsociados() != null ? actual.getCentrosAsociados() : new ArrayList<>()
+        ), new ArrayList<>(
+                expected.getCentrosAsociados() != null ? expected.getCentrosAsociados() : new ArrayList<>()
+        ));
 	}
 
 	private void compruebaCampos(MensajeCentro expected, MensajeCentro actual){
@@ -118,26 +109,23 @@ class BackendApplicationTests {
 		assertThat(actual.getCentro()).isEqualTo(expected.getCentro());
 		assertThat(actual.getContenido()).isEqualTo(expected.getContenido());
 
-		assertTrue(
-				new ArrayList<>(
-						actual.getCopias() != null ? actual.getCopias() : new ArrayList<>()
-				).equals(new ArrayList<>(
-						expected.getCopias() != null ? expected.getCopias() : new ArrayList<>()
-				)));
+        assertEquals(new ArrayList<>(
+                actual.getCopias() != null ? actual.getCopias() : new ArrayList<>()
+        ), new ArrayList<>(
+                expected.getCopias() != null ? expected.getCopias() : new ArrayList<>()
+        ));
 
-		assertTrue(
-				new ArrayList<>(
-						actual.getCopiasOcultas() != null ? actual.getCopiasOcultas() : new ArrayList<>()
-				).equals(new ArrayList<>(
-						expected.getCopiasOcultas() != null ? expected.getCopiasOcultas() : new ArrayList<>()
-				)));
+        assertEquals(new ArrayList<>(
+                actual.getCopiasOcultas() != null ? actual.getCopiasOcultas() : new ArrayList<>()
+        ), new ArrayList<>(
+                expected.getCopiasOcultas() != null ? expected.getCopiasOcultas() : new ArrayList<>()
+        ));
 
-		assertTrue(
-			new ArrayList<>(
-					actual.getDestinatarios() != null ? actual.getDestinatarios() : new ArrayList<>()
-			).equals(new ArrayList<>(
-					expected.getDestinatarios() != null ? expected.getDestinatarios() : new ArrayList<>()
-		)));
+        assertEquals(new ArrayList<>(
+                actual.getDestinatarios() != null ? actual.getDestinatarios() : new ArrayList<>()
+        ), new ArrayList<>(
+                expected.getDestinatarios() != null ? expected.getDestinatarios() : new ArrayList<>()
+        ));
 	}
 
 	private void compruebaCampos(Centro expected, Centro actual){
@@ -148,26 +136,26 @@ class BackendApplicationTests {
 
 	@Nested
 	@DisplayName("cuando la base de datos esta vacía")
-	public class BasesDatosVacía{
+	public class BasesDatosVacia{
 
 		@Test
 		@DisplayName("devuelve un error al acceder a un gerente concreto")
 		public void errorConGerenteConcreto(){
-			var peticion = get("http", "localhost", port, "/gerentes/1");
+			var peticion = get(port, "/gerentes/1");
 			var respuesta = restTemplate.exchange(peticion, new ParameterizedTypeReference<GerenteDTO>() {});
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(404);
 		}
 		@Test
 		@DisplayName("devuelve un error al acceder a un mensaje concreto")
 		public void errorConMensajeConcreto(){
-			var peticion = get("http", "localhost", port, "/mensajes/1");
+			var peticion = get(port, "/mensajes/1");
 			var respuesta = restTemplate.exchange(peticion, new ParameterizedTypeReference<MensajeDTO>() {});
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(404);
 		}
 		@Test
 		@DisplayName("devuelve un error al acceder a un centro concreto")
 		public void errorConCentroConcreto(){
-			var peticion = get("http", "localhost", port, "/centros/1");
+			var peticion = get(port, "/centros/1");
 			var respuesta = restTemplate.exchange(peticion, new ParameterizedTypeReference<CentroDTO>() {});
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(404);
 		}
@@ -181,17 +169,17 @@ class BackendApplicationTests {
 					.idUsuario(0L)
 					.build();
 			
-			var peticion = post("http", "localhost", port, "/gerentes", gerenteDTO);
+			var peticion = post(port, "/gerentes", gerenteDTO);
 			var respuesta = restTemplate.exchange(peticion, Void.class);
 
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(201);
-			assertThat(respuesta.getHeaders().get("Location").get(0))
+			assertThat(Objects.requireNonNull(respuesta.getHeaders().get("Location")).getFirst())
 					.startsWith("http://localhost:"+port+"/gerentes");
 			List<Gerente> gerentesBD = gerenteRepo.findAll();
 			assertThat(gerentesBD).hasSize(1);
-			assertThat(respuesta.getHeaders().get("Location").get(0))
-					.endsWith("/"+gerentesBD.get(0).getId());
-			compruebaCampos(gerenteDTO.gerente(), gerentesBD.get(0));
+			assertThat(Objects.requireNonNull(respuesta.getHeaders().get("Location")).getFirst())
+					.endsWith("/"+gerentesBD.getFirst().getId());
+			compruebaCampos(gerenteDTO.gerente(), gerentesBD.getFirst());
 		}
 		
 		@Test
@@ -201,17 +189,17 @@ class BackendApplicationTests {
 					.asunto("consulta")
 					.destinatarios(new ArrayList<>())
 					.build();
-			var peticion = post("http", "localhost", port, "/mensajes", mensaje);
+			var peticion = post(port, "/mensajes", mensaje);
 			var respuesta = restTemplate.exchange(peticion, Void.class);
 
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(201);
-			assertThat(respuesta.getHeaders().get("Location").get(0))
+			assertThat(Objects.requireNonNull(respuesta.getHeaders().get("Location")).getFirst())
 					.startsWith("http://localhost:"+port+"/mensajes");
 			List<MensajeCentro> mensajesBD = mensajeRepo.findAll();
 			assertThat(mensajesBD).hasSize(1);
-			assertThat(respuesta.getHeaders().get("Location").get(0))
-					.endsWith("/"+mensajesBD.get(0).getId());
-			compruebaCampos(mensaje.mensaje(), mensajesBD.get(0));
+			assertThat(Objects.requireNonNull(respuesta.getHeaders().get("Location")).getFirst())
+					.endsWith("/"+mensajesBD.getFirst().getId());
+			compruebaCampos(mensaje.mensaje(), mensajesBD.getFirst());
 		}
 
 		@Test
@@ -221,7 +209,7 @@ class BackendApplicationTests {
 					.nombre("Gym S.L.")
 					.direccion("C/24")
 					.build();
-			var peticion = post("http", "localhost", port, "/centros", centro);
+			var peticion = post(port, "/centros", centro);
 			var respuesta = restTemplate.exchange(peticion, Void.class);
 
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(201);
@@ -229,9 +217,9 @@ class BackendApplicationTests {
 					.startsWith("http://localhost:"+port+"/centros");
 			List<Centro> centrosBD = centroRepo.findAll();
 			assertThat(centrosBD).hasSize(1);
-			assertThat(respuesta.getHeaders().get("Location").get(0))
-					.endsWith("/"+centrosBD.get(0).getId());
-			compruebaCampos(centro.centro(), centrosBD.get(0));
+			assertThat(Objects.requireNonNull(respuesta.getHeaders().get("Location")).getFirst())
+					.endsWith("/"+centrosBD.getFirst().getId());
+			compruebaCampos(centro.centro(), centrosBD.getFirst());
 		}
 
 		@Test
@@ -240,7 +228,7 @@ class BackendApplicationTests {
 			var gerente = GerenteDTO.builder()
 					.empresa("EmpresaS.L.")
 					.build();
-			var peticion = put("http", "localhost", port, "/gerentes/1", gerente);
+			var peticion = put(port, "/gerentes/1", gerente);
 			var respuesta = restTemplate.exchange(peticion, Void.class);
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(404);
 		}
@@ -252,7 +240,7 @@ class BackendApplicationTests {
 					.asunto("consulta")
 					.destinatarios(new ArrayList<>())
 					.build();
-			var peticion = put("http", "localhost", port, "/mensajes/1", mensaje);
+			var peticion = put(port, "/mensajes/1", mensaje);
 			var respuesta = restTemplate.exchange(peticion, Void.class);
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(404);
 		}
@@ -264,7 +252,7 @@ class BackendApplicationTests {
 					.nombre("Gym S.L.")
 					.direccion("C/24")
 					.build();
-			var peticion = put("http", "localhost", port, "/centros/1", centro);
+			var peticion = put(port, "/centros/1", centro);
 			var respuesta = restTemplate.exchange(peticion, Void.class);
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(404);
 		}
@@ -272,7 +260,7 @@ class BackendApplicationTests {
 		@Test
 		@DisplayName("devuelve un error al eliminar un gerente que no existe")
 		public void eliminarGerenteInexistente(){
-			var peticion = delete("http", "localhost", port, "/gerentes/1");
+			var peticion = delete(port, "/gerentes/1");
 			var respuesta = restTemplate.exchange(peticion, Void.class);
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(404);
 		}
@@ -280,7 +268,7 @@ class BackendApplicationTests {
 		@Test
 		@DisplayName("devuelve un error al eliminar un centro que no existe")
 		public void eliminarCentroInexistente(){
-			var peticion = delete("http", "localhost", port, "/centros/1");
+			var peticion = delete(port, "/centros/1");
 			var respuesta = restTemplate.exchange(peticion, Void.class);
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(404);
 		}
@@ -288,7 +276,7 @@ class BackendApplicationTests {
 		@Test
 		@DisplayName("devuelve un error al eliminar un mensaje que no existe")
 		public void eliminarMensajeInexistente(){
-			var peticion = delete("http", "localhost", port, "/mensajes/1");
+			var peticion = delete(port, "/mensajes/1");
 			var respuesta = restTemplate.exchange(peticion, Void.class);
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(404);
 		}
@@ -325,7 +313,7 @@ class BackendApplicationTests {
 				.nombre("Gym")
 				.direccion("C/Malaga")
 				.build();
-			var peticion = post("http", "localhost", port, "/centros", centro);
+			var peticion = post(port, "/centros", centro);
 			var respuesta = restTemplate.exchange(peticion, Void.class);
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(409);
 		}
@@ -337,7 +325,7 @@ class BackendApplicationTests {
 				.empresa("EmpresaS.L.")
 				.idUsuario(0L)
 				.build();
-			var peticion = post("http", "localhost", port, "/gerentes", gerente);
+			var peticion = post(port, "/gerentes", gerente);
 			var respuesta = restTemplate.exchange(peticion, Void.class);
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(409);
 		}
@@ -345,30 +333,30 @@ class BackendApplicationTests {
 		@Test
 		@DisplayName("obtiene un centro concretamente")
 		public void errorConCentroConcreto(){
-			var peticion = get("http", "localhost", port, "/centros/1");
+			var peticion = get(port, "/centros/1");
 			var respuesta = restTemplate.exchange(peticion, new ParameterizedTypeReference<CentroDTO>() {});
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(200);
-			assertThat(respuesta.getBody().getNombre()).isEqualTo("Gym");
+			assertThat(Objects.requireNonNull(respuesta.getBody()).getNombre()).isEqualTo("Gym");
 			assertThat(respuesta.getBody().getDireccion()).isEqualTo("C/Malaga");
 		}
 
 		@Test
 		@DisplayName("obtiene un gerente concretamente")
 		public void errorConGerenteConcreto(){
-			var peticion = get("http", "localhost", port, "/gerentes/1");
+			var peticion = get(port, "/gerentes/1");
 			var respuesta = restTemplate.exchange(peticion, new ParameterizedTypeReference<GerenteDTO>() {});
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(200);
-			assertThat(respuesta.getBody().getEmpresa()).isEqualTo("EmpresaS.L.");
+			assertThat(Objects.requireNonNull(respuesta.getBody()).getEmpresa()).isEqualTo("EmpresaS.L.");
 			assertThat(respuesta.getBody().getIdUsuario()).isEqualTo(0L);
 		}
 
 		@Test
 		@DisplayName("obtiene un mensaje concretamente")
 		public void errorConMensajeConcreto(){
-			var peticion = get("http", "localhost", port, "/mensajes/1");
+			var peticion = get(port, "/mensajes/1");
 			var respuesta = restTemplate.exchange(peticion, new ParameterizedTypeReference<MensajeDTO>() {});
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(200);
-			assertThat(respuesta.getBody().getAsunto()).isEqualTo("Prueba");
+			assertThat(Objects.requireNonNull(respuesta.getBody()).getAsunto()).isEqualTo("Prueba");
 			assertThat(respuesta.getBody().getContenido()).isEqualTo("mensaje de prueba");
 		}
 
@@ -379,7 +367,7 @@ class BackendApplicationTests {
 				.nombre("GymNuevo")
 				.direccion("C/Teatinos")
 				.build();
-			var peticion = put("http", "localhost", port, "/centros/1", centro);
+			var peticion = put(port, "/centros/1", centro);
 			var respuesta = restTemplate.exchange(peticion, Void.class);
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(200);
 			assertThat(centroRepo.findById(1L).getNombre()).isEqualTo("GymNuevo");
@@ -393,7 +381,7 @@ class BackendApplicationTests {
 			centro.setNombre("GymNuevo");
 			centro.setDireccion("C/Teatinos");
 			centroRepo.save(centro);
-			var peticion = delete("http", "localhost", port, "/centros/2");
+			var peticion = delete(port, "/centros/2");
 			var respuesta = restTemplate.exchange(peticion, Void.class);
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(200);
 			assertThat(centroRepo.count()).isEqualTo(1);
@@ -406,7 +394,7 @@ class BackendApplicationTests {
 			gerente.setEmpresa("EmpresaNuevaS.L.");
 			gerente.setIdUsuario(1L);
 			gerenteRepo.save(gerente);
-			var peticion = delete("http", "localhost", port, "/gerentes/2");
+			var peticion = delete(port, "/gerentes/2");
 			var respuesta = restTemplate.exchange(peticion, Void.class);
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(200);
 			assertThat(gerenteRepo.count()).isEqualTo(1);
@@ -419,7 +407,7 @@ class BackendApplicationTests {
 			mensaje.setAsunto("MensajeEliminar");
 			mensaje.setContenido("mensaje a eliminar");
 			mensajeRepo.save(mensaje);
-			var peticion = delete("http", "localhost", port, "/mensajes/2");
+			var peticion = delete(port, "/mensajes/2");
 			var respuesta = restTemplate.exchange(peticion, Void.class);
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(200);
 			assertThat(mensajeRepo.count()).isEqualTo(1);
@@ -428,70 +416,70 @@ class BackendApplicationTests {
 		@Test
 		@DisplayName("obtiene un centro concreto")
 		public void obtenerCentroConcreto(){
-			var peticion = get("http", "localhost", port, "/centros/1");
+			var peticion = get(port, "/centros/1");
 			var respuesta = restTemplate.exchange(peticion, 
 					new ParameterizedTypeReference<CentroDTO>() {});
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(200);
-			assertThat(respuesta.getBody().getNombre()).isEqualTo("Gym");
+			assertThat(Objects.requireNonNull(respuesta.getBody()).getNombre()).isEqualTo("Gym");
 			assertThat(respuesta.getBody().getDireccion()).isEqualTo("C/Malaga");
 		}
 
 		@Test
 		@DisplayName("obtiene un gerente concreto")
 		public void obtenerGerenteConcreto(){
-			var peticion = get("http", "localhost", port, "/gerentes/1");
+			var peticion = get(port, "/gerentes/1");
 			var respuesta = restTemplate.exchange(peticion, 
 					new ParameterizedTypeReference<GerenteDTO>() {});
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(200);
-			assertThat(respuesta.getBody().getEmpresa()).isEqualTo("EmpresaS.L.");
+			assertThat(Objects.requireNonNull(respuesta.getBody()).getEmpresa()).isEqualTo("EmpresaS.L.");
 			assertThat(respuesta.getBody().getIdUsuario()).isEqualTo(0L);
 		}
 
 		@Test
 		@DisplayName("obtiene un mensaje concreto")
 		public void obtenerMensajeConcreto(){
-			var peticion = get("http", "localhost", port, "/mensajes/1");
+			var peticion = get(port, "/mensajes/1");
 			var respuesta = restTemplate.exchange(peticion, 
 					new ParameterizedTypeReference<MensajeDTO>() {});
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(200);
-			assertThat(respuesta.getBody().getAsunto()).isEqualTo("Prueba");
+			assertThat(Objects.requireNonNull(respuesta.getBody()).getAsunto()).isEqualTo("Prueba");
 			assertThat(respuesta.getBody().getContenido()).isEqualTo("mensaje de prueba");
 		}
 
 		@Test
 		@DisplayName("devuelve una lista de centros")
 		public void devuelveListaCentros() {
-			var peticion = get("http", "localhost",port, "/centros");
+			var peticion = get(port, "/centros");
 
 			var respuesta = restTemplate.exchange(peticion,
 					new ParameterizedTypeReference<List<CentroDTO>>() {});
 
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(200);
-			assertThat(respuesta.getBody().size()).isEqualTo(1);
+			assertThat(Objects.requireNonNull(respuesta.getBody()).size()).isEqualTo(1);
 		}
 
 		@Test
 		@DisplayName("devuelve una lista de gerentes")
 		public void devuelveListaGerentes() {
-			var peticion = get("http", "localhost",port, "/gerentes");
+			var peticion = get(port, "/gerentes");
 
 			var respuesta = restTemplate.exchange(peticion,
 					new ParameterizedTypeReference<List<GerenteDTO>>() {});
 
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(200);
-			assertThat(respuesta.getBody().size()).isEqualTo(1);
+			assertThat(Objects.requireNonNull(respuesta.getBody()).size()).isEqualTo(1);
 		}
 
 		@Test
 		@DisplayName("devuelve una lista de mensajes")
 		public void devuelveListaMensajes() {
-			var peticion = get("http", "localhost",port, "/mensajes");
+			var peticion = get(port, "/mensajes");
 
 			var respuesta = restTemplate.exchange(peticion,
 					new ParameterizedTypeReference<List<MensajeDTO>>() {});
 
 			assertThat(respuesta.getStatusCode().value()).isEqualTo(200);
-			assertThat(respuesta.getBody().size()).isEqualTo(1);
+			assertThat(Objects.requireNonNull(respuesta.getBody()).size()).isEqualTo(1);
 		}
 
 		@Test
@@ -511,7 +499,7 @@ class BackendApplicationTests {
 			List<Map<String,Object>> tablaCentro = jdbcTemplate.queryForList("SELECT * FROM Centro");
 			List<Map<String,Object>> tablaGerente = jdbcTemplate.queryForList("SELECT * FROM Gerente");
 			// Preparamos la petición con el centro dentro
-			var peticion = post("http", "localhost",port, "/gerentes", gerente);
+			var peticion = post(port, "/gerentes", gerente);
 
 			// Invocamos al servicio REST 
 			var respuesta = restTemplate.exchange(peticion,Void.class);
@@ -529,7 +517,7 @@ class BackendApplicationTests {
 									.findFirst()
 									.get();
 			assertThat(gerentesBD).hasSize(2);
-			assertThat(respuesta.getHeaders().get("Location").getFirst())
+			assertThat(Objects.requireNonNull(respuesta.getHeaders().get("Location")).getFirst())
 				.endsWith("/"+ger.getId());
 			compruebaCampos(gerente.gerente(), ger);
 		}
